tdf#137734 Chart OOXML import: fix variable color charts

generated by third-party tools by setting VaryColorsByPoint,
if the c:varyColors element is missing.

Change-Id: Ia5031d26699b8926054b96ba38320ac848b4f228