oox/source/drawingml/chart/typegroupmodel.cxx
@@ -53,7 +53,7 @@ TypeGroupModel::TypeGroupModel( sal_Int32 nTypeId, bool bMSO2007Doc ) :
     mbShowMarker( !bMSO2007Doc ),
     mbShowNegBubbles( !bMSO2007Doc ),
     mbSmooth( !bMSO2007Doc ),
-    mbVaryColors( !bMSO2007Doc ),
+    mbVaryColors( false ),
     mbWireframe( !bMSO2007Doc )
 {
 }
